--- a/app/views/licenses/new.html.erb
+++ b/app/views/licenses/new.html.erb
@@ -1,5 +1,14 @@
-<h1>New license</h1>
-
+   <div class="pageheader" data-no-turbolink>
+      <h2><i class="glyphicon glyphicon-book"></i> Add License </h2>
+      <div class="breadcrumb-wrapper">
+        <span class="label">You are here:</span>
+        <ol class="breadcrumb">
+            <li><%= link_to 'Dashboard', root_path %></li>
+            <li><%= link_to 'Liscense Listing', licenses_path %></li>
+            <li class="active">Add License </li>
+        </ol>
+      </div>
+   </div>
 <%= render 'form' %>
 
-<%= link_to 'Back', licenses_path %>
+<%#= link_to 'Back', licenses_path %>
