entering mandatory fields

--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -29,7 +29,7 @@
 	    <div class="panel panel-default">
 	        <div class="panel-heading">
 	            <h4 class="panel-title">User Form</h4>
-	            <p>Please enter all fields.</p>
+	             <p>Please enter all mandatory (<span class="asterisk">*</span>) fields.</p>
 	        </div>
 	        <div class="panel-body">
 	        	<%= form_for @user, :html=>{:class=>"form_validation"} do |f| %>
