--- a/app/views/licenses/_form.html.erb
+++ b/app/views/licenses/_form.html.erb
@@ -3,7 +3,7 @@
 	    <div class="panel panel-default">
 	        <div class="panel-heading">
 	            <h4 class="panel-title">License Form</h4>
-	            <p>Please enter all fields.</p>
+	             <p>Please enter all mandatory (<span class="asterisk">*</span>) fields.</p>
 	        </div>
 	        <div class="panel-body">
 	        	<%= form_for @license, :html=>{:class=>"form_validation"} do |f| %>
