--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -51,7 +51,11 @@
 	        </div>
 	        <div class="panel-footer" data-no-turbolink>
 	            <%= f.submit "Save", class: "btn btn-primary btn-xs", data: { disable_with: 'Saving...' } %>
-				<%= link_to 'Cancel', users_path, class: "btn btn-white btn-xs"%>
+				<% if @role_id.eql?('1')%>
+					<%= link_to 'Cancel', users_path(:role_id => 1), class: "btn btn-white btn-xs"%>
+				<% elsif @role_id.eql?('2')%>
+				    <%= link_to 'Cancel', users_path(:role_id => 2), class: "btn btn-white btn-xs"%>
+				<%end%>	
 	        </div>
 			<% end %>
 	    </div>
