--- a/app/views/users/_common_fields.html.erb
+++ b/app/views/users/_common_fields.html.erb
@@ -34,6 +34,7 @@
 	                    </div>
 	                </div>
 	            </div>
+				<% unless ('edit').eql?action_name%>
 	            <div class="row">
 	                <div class="col-sm-3">
 	                    <div class="form-group">
@@ -48,3 +49,4 @@
 	                    </div>
 	                </div>
 	            </div>
+				<%end%>
