--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -23,12 +23,23 @@
             	</address>
 			    <div data-no-turbolink>
 			        <%= link_to 'Edit', edit_user_path(@user), :class=>"btn btn-success btn-xs", data: { disable_with: 'Saving...' } %>
-			        <%= link_to 'Cancel', users_path, class: "btn btn-white btn-xs"%>
+					<% if @role_id.eql?('1')%>
+						<%= link_to 'Cancel', users_path(:role_id => 1), class: "btn btn-white btn-xs"%>
+					<% elsif @role_id.eql?('2')%>
+					    <%= link_to 'Cancel', users_path(:role_id => 2), class: "btn btn-white btn-xs"%>
+					<%end%>
         	    </div>
 		    </div>
         </div>
     </div>
 </div>
 <script type="text/javascript">
-	showHideMenu('li_webadmin');
+if( <%= @role_id.eql?('1')%>)
+{
+    showHideMenu('li_webadmin');	
+}
+else if(<%= @role_id.eql?('2')%>)
+{
+    showHideMenu('li_schooladmin');	
+}
 </script>
