--- a/app/views/licenses/create.js.erb
+++ b/app/views/licenses/create.js.erb
@@ -1,1 +1,4 @@
-$('#id_license_info').html('<%= j(render "licenses_info", :object=>@license) %>')
+$('#id_license_info').html('<%= j(render "licenses_info") %>')
+
+$('#license_no_of_licenses').val('');
+$('#datepicker').val('');
