--- a/app/views/schools/delete_school.js.erb
+++ b/app/views/schools/delete_school.js.erb
@@ -1,3 +1,4 @@
 window.location.reload();
 $('.select-all-school').prop("checked", false);
 $('.school-check-box').prop("checked", false);
+document.getElementById("delete_school").disabled=true;
