--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -1,45 +1,68 @@
-<%= form_for(@book) do |f| %>
-  <% if @book.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@book.errors.count, "error") %> prohibited this book from being saved:</h2>
+<div class="row">
+	<div class="col-md-12">
+	    <div class="panel panel-default">
+	        <div class="panel-heading">
+	            <p>Please enter all mandatory (<span class="asterisk">*</span>) fields.</p>
+	        </div>
+	        <div class="panel-body">
+				<%= form_for @book, :html=>{:class=>"form_validation"}, :html => { :multipart => true } do |f| %>
+				    <% if @book.errors.any? %>
+				    <div id="error_explanation">
+				        <h4><%= pluralize(@book.errors.count, "error") %> prohibited this book from being saved:</h4>
+				        <ul>
+				            <% @book.errors.full_messages.each do |msg| %>
+				                <li><%= msg %></li>
+				            <% end %>
+				        </ul>
+				    </div>
+				  	<% end %>
+	            <div class="row">
+	                <div class="col-sm-3">
+	                    <div class="form-group">
+	                    	<%= f.label :title, "Book Title", :class=>"control-label" %><span class="asterisk">*</span> </br>
+	                    	<%= f.text_field :title,  :required=>true, :class=>"form-control" %>
+	                    </div>
+	                </div>
+	                <div class="col-sm-9">
+	                    <div class="form-group">
+			     		   <%= f.label :description, "Book Description", :class=>"control-label" %>
+			     		   <%= f.text_area :description, :class=>"form-control" %>
+	                    </div>
+	                </div>
+	            </div>
+	            <div class="row">
+	                <div class="col-sm-3">
+	                    <div class="form-group">
+				    		<%= f.label :author, "Book Author", :class=>"control-label"%>
+				    		<%= f.text_field :author, :class=>"form-control" %>
+	                    </div>
+	                </div>
+	            </div>
+	            <div class="row">
+	            	<div class="col-sm-6">
+	                	<div class="form-group">
+				    		<%= f.label :book_cover, "Small Book Cover", :class=>"control-label"%><span class="asterisk">*</span> </br>
+				    		<%= f.file_field :book_cover, :class=>"form-control" %>
+	                    </div>
+	                </div>
+	                <div class="col-sm-6">
+	                	<div class="form-group">
+				    		<%= f.label :epub_book, "EPub Book", :class=>"control-label"%><span class="asterisk">*</span> </br>
+				    		<%= f.file_field :epub_book, :class=>"form-control" %>
+	                    </div>
+	                </div>
+	            </div>
+	        </div><!-- panel-body -->
+	        <div class="panel-footer" data-no-turbolink>
+	            <%= f.submit "Submit", class: "btn btn-primary btn-sm", data: { disable_with: 'Saving...' } %>
+	        </div>
+			<% end %>
+	    </div>
+    </div>       
+</div>
 
-      <ul>
-      <% @book.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
+<script type="text/javascript">
+	showHideMenu('li_webadmin');
+</script>
 
-  <div class="field">
-    <%= f.label :title %><br>
-    <%= f.text_field :title %>
-  </div>
-  <div class="field">
-    <%= f.label :description %><br>
-    <%= f.text_area :description %>
-  </div>
-  <div class="field">
-    <%= f.label :author %><br>
-    <%= f.text_field :author %>
-  </div>
-  <div class="field">
-    <%= f.label :images %><br>
-    <%= f.text_field :images %>
-  </div>
-  <div class="field">
-    <%= f.label :book_file_name %><br>
-    <%= f.text_field :book_file_name %>
-  </div>
-  <div class="field">
-    <%= f.label :chapters %><br>
-    <%= f.number_field :chapters %>
-  </div>
-  <div class="field">
-    <%= f.label :book_unique_id %><br>
-    <%= f.text_field :book_unique_id %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
-  </div>
-<% end %>
+
