--- a/app/views/books/new.html.erb
+++ b/app/views/books/new.html.erb
@@ -1,5 +1,12 @@
-<h1>New book</h1>
-
+<div class="pageheader" data-no-turbolink>
+   <h2><i class="glyphicon glyphicon-book"></i> Add Book <!-- <span>Subtitle goes here...</span> --></h2>
+   <div class="breadcrumb-wrapper">
+     <span class="label">You are here:</span>
+     <ol class="breadcrumb">
+         <li><%= link_to 'Dashboard', root_path %></li>
+         <li class="active">Add Book </li>
+     </ol>
+   </div>
+</div>
+ 
 <%= render 'form' %>
-
-<%= link_to 'Back', books_path %>
