--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,39 +1,30 @@
-<p id="notice"><%= notice %></p>
-
-<p>
-  <strong>Title:</strong>
-  <%= @book.title %>
-</p>
-
-<p>
-  <strong>Description:</strong>
-  <%= @book.description %>
-</p>
-
-<p>
-  <strong>Author:</strong>
-  <%= @book.author %>
-</p>
-
-<p>
-  <strong>Images:</strong>
-  <%= @book.images %>
-</p>
-
-<p>
-  <strong>Book file name:</strong>
-  <%= @book.book_file_name %>
-</p>
-
-<p>
-  <strong>Chapters:</strong>
-  <%= @book.chapters %>
-</p>
-
-<p>
-  <strong>Book unique:</strong>
-  <%= @book.book_unique_id %>
-</p>
-
-<%= link_to 'Edit', edit_book_path(@book) %> |
-<%= link_to 'Back', books_path %>
+<div class="row">
+	<div class="col-md-12">
+    	<div class="panel panel-default">
+        	<div class="panel-heading">
+            	<h4 class="panel-title">Book Information</h4>
+        	</div>
+        	<div class="panel-body">
+            	<address>
+                	<strong>Book Title:</strong>
+                	<%= @book.title %>
+            	</address>
+            	<address>
+			    	<strong>Book Description</strong>
+			    	<%= @book.description %>
+            	</address>
+            	<address>
+			    	<strong>Book Author</strong>
+			    	<%= @book.author %>
+            	</address>
+            	
+			    <div data-no-turbolink>
+			        <%= link_to 'Cancel', new_book_path, class: "btn btn-white btn-xs"%>
+        	    </div>
+		    </div>
+        </div>
+    </div>
+</div>
+<script type="text/javascript">
+	showHideMenu('li_webadmin');
+</script>
