Licesnse CRUD operations

--- a/app/views/licenses/new.html.erb
+++ b/app/views/licenses/new.html.erb
@@ -1,12 +1,9 @@
-   <div class="pageheader" data-no-turbolink>
-      <h2><i class="glyphicon glyphicon-book"></i> Add License </h2>
-      <div class="breadcrumb-wrapper">
-        <span class="label">You are here:</span>
-        <ol class="breadcrumb">
-            <li><%= link_to 'Dashboard', root_path %></li>
-            <li><%= link_to 'Liscense Listing', licenses_path %></li>
-            <li class="active">Add License </li>
-        </ol>
-      </div>
-   </div>
-<%= render 'form' %>
+<div id="id_license">
+    <%= render 'form' %>
+</div>
+<div id="id_license_info">
+    <%= render 'licenses_info'%>
+</div>
+			
+			
+		
