--- a/app/views/schools/index.html.erb
+++ b/app/views/schools/index.html.erb
@@ -46,7 +46,7 @@
    				   	      <% if can? :destroy, School %> 
 						      <%= link_to '<i title="Archive School" class="glyphicon glyphicon-trash"></i>'.html_safe, school, method: :delete, data: { confirm: 'Are you sure?' } %> 
 					      <%end%>
-						  <%= link_to '<i title="Add License" class="glyphicon glyphicon-tag"></i>'.html_safe, new_license_path(:id=>school)%> 
+						  <%= link_to '<i title="Add License" class="glyphicon glyphicon-tag"></i>'.html_safe, new_license_path(:school_id=>school)%> 
 					</td>
                  </tr>
 				 <% end %>
