--- a/app/views/users/_common_fields.html.erb
+++ b/app/views/users/_common_fields.html.erb
@@ -7,27 +7,36 @@
 	                </div>
 	                <div class="col-sm-3">
 	                    <div class="form-group">
-			     		   <%= f.label :last_name, "Last Name", :class=>"control-label" %><span class="asterisk">*</span>
-			     		   <%= f.text_field :last_name, :required=>true, :class=>"form-control" %>
+			     		   <%= f.label :last_name, "Last Name", :class=>"control-label" %>
+			     		   <%= f.text_field :last_name, :class=>"form-control" %>
 	                    </div>
 	                </div>
 	            </div>
 	            <div class="row">
-	                <div class="col-sm-6">
+	                <div class="col-sm-3">
 	                    <div class="form-group">
 	                    	<%= f.label :phone_number, "Phone Number", :class=>"control-label" %>
 		    			    <%= f.text_field :phone_number, :class=>"form-control" %>
 	                    </div>
 	                </div>
-	            </div>
-				<div class="row">
 	                <div class="col-sm-3">
 	                    <div class="form-group">
-				    		<%= f.label :username, "Username", :class=>"control-label"%><span class="asterisk">*</span>
-				    		<%= f.text_field :username, :required=>true, :class=>"form-control" %>
+							<% unless @role_id.eql?('1')%>
+								<%#= render 'school_admin', f: f%>
+								<%= f.label :school_id, "School", :class=>"control-label" %><span class="asterisk">*</span>
+								<%= f.select :school_id, options_for_select(@schools.collect {|s| [ s.name, s.id ]}, :selected=>f.object.school_id), {:prompt => "Select School"}, {:class => "form-control", :required=>true}%>
+							<%end%>
+		                </div>
+		            </div>
+	            </div>
+				<div class="row">
+	                <!-- <div class="col-sm-3">
+	                    <div class="form-group">
+				    		<%#= f.label :username, "Username", :class=>"control-label"%>
+				    		<%#= f.text_field :username, :class=>"form-control" %>
 	                    </div>
-	                </div>
-	                <div class="col-sm-3">
+	                </div> -->
+	                <div class="col-sm-6">
 	                    <div class="form-group">
 		   			    	<%= f.label :email, :class=>"control-label"%><span class="asterisk">*</span>
 		   			    	<%= f.text_field :email, :required=>true, :class=>"form-control" %>
