--- a/app/views/classrooms/_form.html.erb
+++ b/app/views/classrooms/_form.html.erb
@@ -1,37 +1,76 @@
-<%= form_for(@classroom) do |f| %>
-  <% if @classroom.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@classroom.errors.count, "error") %> prohibited this classroom from being saved:</h2>
+<div class="row">
+	<div class="col-md-12">
+	    <div class="panel panel-default">
+	        <div class="panel-heading">
+	            <h4 class="panel-title">Classroom Form</h4>
+	            <p>Please enter all mandatory (<span class="asterisk">*</span>) fields.</p>
+	        </div>
+	        <div class="panel-body">
+				<%= form_for(@classroom, :html=>{:class=>"form_validation"} ) do |f| %>
+				    <% if @classroom.errors.any? %>
+				    <div id="error_explanation">
+				        <h4><%= pluralize(@classroom.errors.count, "error") %> prohibited this classroom from being saved:</h4>
+				        <ul>
+				            <% @classroom.errors.full_messages.each do |msg| %>
+				                <li><%= msg %></li>
+				            <% end %>
+				        </ul>
+				    </div>
+				  	<% end %>
+	            <div class="row">
+	                <div class="col-sm-3">
+	                    <div class="form-group">
+	                    	<%= f.label :code, "Classroom Code", :class=>"control-label" %><span class="asterisk">*</span> </br>
+	                    	<%= f.text_field :code, :autofocus => true, :required=>true, :class=>"form-control" %>
+	                    </div>
+	                </div>
+	                <div class="col-sm-3">
+	                    <div class="form-group">
+			     		   <%= f.label :name, "Classroom Name", :class=>"control-label" %><span class="asterisk">*</span>
+			     		   <%= f.text_field :name, :autofocus => true, :required=>true, :class=>"form-control" %>
+	                    </div>
+	                </div>
+	            </div>
+	            <div class="row">
+	                <div class="col-sm-3">
+	                    <div class="form-group">
+				    		<%= f.label :cover_image, "School District", :class=>"control-label"%>
+				    		<%= f.text_field :cover_image, :class=>"form-control" %>
+	                    </div>
+	                </div>
+	                <div class="col-sm-3">
+	                    <div class="form-group">
+		   			    	<%= f.label :secret_key, :class=>"control-label"%>
+		   			    	<%= f.text_field :secret_key, :class=>"form-control" %>
+	                    </div>
+	                </div>
+	            </div>
+	            <div class="row">
+	            	<div class="col-sm-3">
+	                	<div class="form-group">
+			    		    <%= f.label :teacher_count, :class=>"control-label" %>
+			    			<%= f.text_field :teacher_count, :class=>"form-control" %>
+	                    </div>
+	                </div>
+	                <div class="col-sm-3">
+	                    <div class="form-group">
+			    		    <%= f.label :student_count, :class=>"control-label" %>
+			    			<%= f.text_field :student_count, :class=>"form-control" %>
+	                    </div>
+	                </div>
+	            </div>
+	        </div><!-- panel-body -->
+	        <div class="panel-footer" data-no-turbolink>
+	            <%= f.submit "Save", class: "btn btn-primary btn-sm", data: { disable_with: 'Saving...' } %>
+				<%= link_to 'Cancel', classrooms_path, class: "btn btn-white btn-xs"%>
+	        </div>
+			<% end %>
+	    </div>
+    </div>       
+</div>
 
-      <ul>
-      <% @classroom.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
+<script type="text/javascript">
+	showHideMenu('li_school');
+</script>
 
-  <div class="field">
-    <%= f.label :code %><br>
-    <%= f.number_field :code %>
-  </div>
-  <div class="field">
-    <%= f.label :name %><br>
-    <%= f.text_field :name %>
-  </div>
-  <div class="field">
-    <%= f.label :cover_image %><br>
-    <%= f.text_field :cover_image %>
-  </div>
-  <div class="field">
-    <%= f.label :secret_key %><br>
-    <%= f.text_field :secret_key %>
-  </div>
-  <div class="field">
-    <%= f.label :classroom_count %><br>
-    <%= f.text_field :classroom_count %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
-  </div>
-<% end %>
+
