--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -46,6 +46,7 @@
 			      <li><%= link_to '<i class="fa fa-caret-right"></i>'.html_safe + "Add School", new_school_path %></li>
 			  <%end%>
 			  <li><%= link_to '<i class="fa fa-caret-right"></i>'.html_safe + "School List", schools_path %></li>
+			  <li><%= link_to '<i class="fa fa-caret-right"></i>'.html_safe + "Classroom List", classrooms_path %></li>
           </ul>
         </li>
 		
