--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,4 +1,4 @@
-<%= form_tag 'users/delete_user', remote: true do %>
+<%#= form_tag 'users/delete_user', remote: true do %>
   <div class="panel panel-default">
 	<div class="panel-body"> 
 	  <div class="index_page_btns" data-no-turbolink>
@@ -19,8 +19,10 @@
                 	<th></th>
                     <th>First Name</th>
                     <th>Last Name</th>
-                    <th>Username</th>
+                    <!-- <th>Username</th> -->
                     <th>Email</th>
+					<th>Phone Number</th>
+					<th>License Expiration Date</th>
 					<th>Actions</th>
                  </tr>
               </thead>
@@ -30,25 +32,29 @@
                  	  <td class=""><%= check_box_tag 'user_ids[]', user.id, false, :class => "user-check-box" %></td>
                       <td class=""><%= user.first_name %></td>
                       <td class=""><%= user.last_name %></td>
-                      <td class=""><%= user.username %></td>
+                      <!-- <td class=""><%#= user.username %></td> -->
                       <td class="center "><%= user.email %></td>
+					  <td class=""><%= user.phone_number %></td>
+					  <td class=""><%= user.license_expiry_date %></td>
 					 
    				      <td data-no-turbolink>
    				      	<% if user.email == current_user.email %>
-   				      		<%= link_to '<i title="Edit User" class="fa fa-pencil"></i>'.html_safe, edit_user_path(user, :role_id => @role_id) %> 
+   				      		<%= link_to '<i title="Edit User" class="fa fa-pencil"></i>'.html_safe, edit_user_path(user, :role_id => @role_id) %>  | 
    				      	<% else %>			
-						  <%= link_to '<i title="Edit User" class="fa fa-pencil"></i>'.html_safe, edit_user_path(user, :role_id => @role_id) %>
+						  <%= link_to '<i title="Edit User" class="fa fa-pencil"></i>'.html_safe, edit_user_path(user, :role_id => @role_id) %> | 
 						<% end %> 
-   				   	      <%= link_to '<i title="Archive User" class="glyphicon glyphicon-trash"></i>'.html_safe, user, method: :delete, data: { confirm: 'Are you sure?' } %>
+   				   	      <%= link_to '<i title="Archive User" class="glyphicon glyphicon-trash"></i>'.html_safe, user, method: :delete, data: { confirm: 'Are you sure?' } %> | 
 						<% unless @role_id.eql?('1')%>  
 						    <%= hidden_field_tag :user_id, user.id%>
-						    <button class="btn btn-primary btn-xs assign_milestone" data-toggle="modal" data-target="#myModal" data-input='<%=user.id%>' >
+							<button class="btn btn-primary btn-xs assign_milestone" data-toggle="modal" data-target="#myModal" data-input='<%=user.id%>' >
 						        Assign License
-						    </button>
-							<!-- <button type="button" data-input='<%#=fc.id%>' data-toggle="modal" data-target="#myModal" class="fc_delayed btn btn-danger btn-cons btn-sm btn-small">Delayed</button> -->
-							
+						    </button> | 
 						<%end%>  
-					 </td>
+						<button class="btn btn-primary btn-xs change_password" data-toggle="modal" data-target="#changePassword" data-input='<%=user.id%>' >
+					       Change Password
+					    </button>
+						<%#= link_to '<i title="Change Password" class="fa fa-lock"></i>'.html_safe, '', :class=>"", data: { toggle: "modal", target: "#myModal"} %>
+					</td>
                  </tr>
 				 <% end %>
         </tbody>
@@ -59,7 +65,7 @@
 		<%= paginate @users %>
 	</div>
  </div>		  
-<% end %>
+<%#= end %>
 
 
 <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
@@ -80,6 +86,23 @@
   </div>
 </div>		
 
+
+<div class="modal fade" id="changePassword" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+        <h4 class="modal-title" id="myModalLabel">Change Password</h4>
+      </div>
+      <div class="modal-body">
+		  <div id="change_user_password_info"></div>
+	  </div>
+    </div>
+  </div>
+</div>	
+
+
+
 <script type="text/javascript">
 	if( <%= @role_id.eql?('1')%>)
 	{
@@ -88,6 +111,10 @@
 	else if(<%= @role_id.eql?('2')%>)
 	{
 	    showHideMenu('li_schooladmin');	
+	}
+	else if(<%= @role_id.eql?('3')%>)
+	{
+	    showHideMenu('li_teacher');	
 	}
 
 $( ".assign_milestone" ).click(function() {
@@ -100,5 +127,17 @@ function(data) {
              }
       });
 });
+
+$( ".change_password" ).click(function() {
+          jQuery.get("<%=url_for(:controller=>'users',:action=>'change_user_password')%>",{ id : $(this).attr('data-input')},
+function(data) {
+	         
+             if(data)
+              {
+			   jQuery("#change_user_password_info").html(data);
+             }
+      });
+});
+
 </script>
 
