--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -14,18 +14,22 @@
 			    	<%= @user.last_name %>
             	</address>
             	<address>
-			    	<strong>Username:</strong>
-			    	<%= @user.username %>
+			    	<strong>Phone Number:</strong>
+			    	<%= @user.phone_number %>
             	</address>
+				<!-- <address>
+			    	<strong>Username:</strong>
+			    	<%#= @user.username %>
+            	</address> -->
             	<address>
 			    	<strong>Email:</strong>
 			    	<%= @user.email %>
             	</address>
 			    <div data-no-turbolink>
-			        <%= link_to 'Edit', edit_user_path(@user), :class=>"btn btn-success btn-xs", data: { disable_with: 'Saving...' } %>
-					<% if @role_id.eql?('1')%>
+			        <%= link_to 'Edit', edit_user_path(@user, :role_id => @user.role_id), :class=>"btn btn-success btn-xs" %>
+					<% if @user.role_id.eql?(1)%>
 						<%= link_to 'Cancel', users_path(:role_id => 1), class: "btn btn-white btn-xs"%>
-					<% elsif @role_id.eql?('2')%>
+					<% elsif @user.role_id.eql?(2)%>
 					    <%= link_to 'Cancel', users_path(:role_id => 2), class: "btn btn-white btn-xs"%>
 					<%end%>
         	    </div>
