--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -5,9 +5,11 @@
 		<% if @role_id.eql?('1')%>
 			<%=link_to 'Add Web Admin', new_user_path(:role_id => @role_id), :class=>"btn btn-success btn-xs"%>
 		<%elsif @role_id.eql?('2')%>
-		    <%=link_to 'Add School Admin', new_user_path(:role_id => @role_id), :class=>"btn btn-success btn-xs"%>
+		    <%=link_to 'Add School Admin', new_user_path(:role_id => @role_id, :school_id => params[:school_id]), :class=>"btn btn-success btn-xs"%>
 		<%elsif @role_id.eql?('3')%>
-		    <%=link_to 'Add Teacher', new_user_path(:role_id => @role_id), :class=>"btn btn-success btn-xs"%>	
+		    <%=link_to 'Add Teacher', new_user_path(:role_id => @role_id), :class=>"btn btn-success btn-xs"%>
+		<%elsif @role_id.eql?('4')%>
+		    <%=link_to 'Add Student', new_user_path(:role_id => @role_id), :class=>"btn btn-success btn-xs"%>    	
 		<%end%>
 		<%=submit_tag 'Delete', :class=>"btn btn-success btn-xs delete-user-list", :id=>'delete_user',:disabled => true, data: { confirm: 'Are you sure?' }%>
 	  </div>
@@ -87,7 +89,11 @@
 	}
 	else if(<%= @role_id.eql?('2')%>)
 	{
-	    showHideMenu('li_schooladmin');	
+	    showHideMenu('li_school');	
+	}
+	else if(<%= @role_id.eql?('3')%>)
+	{
+	    showHideMenu('li_teacher');	
 	}
 
 $( ".assign_milestone" ).click(function() {
