mails sent on create/update web admin

--- a/app/views/licenses/_form.html.erb
+++ b/app/views/licenses/_form.html.erb
@@ -2,7 +2,7 @@
 	<div class="col-md-12">
 	    <div class="panel panel-default">
 	        <div class="panel-heading">
-	            <h4 class="panel-title">License Form</h4>
+	            <!-- <h4 class="panel-title">License Form</h4> -->
 	             <p>Please enter all mandatory (<span class="asterisk">*</span>) fields.</p>
 	        </div>
 	        <div class="panel-body">
