--- a/app/views/user_mailer/forgot_password_email.text.erb
+++ b/app/views/user_mailer/forgot_password_email.text.erb
@@ -7,4 +7,4 @@ link: <%= @link %>
 
 To login to the site, just follow this link: <%= @url %> 
 
-Thanks for joining and have a great day!
+Thanks, Books That Grow Team!
