--- a/app/views/user_mailer/user_details_changed.text.erb
+++ b/app/views/user_mailer/user_details_changed.text.erb
@@ -1,9 +1,9 @@
 Welcome to Books That Grow
 
-Your account has been created with Books That Grow
+Hello, <%= @username %>  
+Your account information has been edited by: <%= @logged_in_user%>
 
-Username: <%= @username %> 
-Email: <%= @email %>
+Following details have been edited: <%= @changed_values.map(&:inspect).join(', ')%>
 
 To login to the site, just follow this link: <%= @login_url %> 
 
