--- a/app/views/user_mailer/user_email_changed.txt.erb
+++ b/app/views/user_mailer/user_email_changed.txt.erb
@@ -1,9 +1,9 @@
 Welcome to Books That Grow
 
-Your account has been created with Books That Grow
+Hello, <%= @username %>  
+Your account email address has been changes by: <%= @logged_in_user%>
 
-Username: <%= @username %> 
-Email: <%= @email %>
+Your new email address is: <%= @new_email%>
 
 To login to the site, just follow this link: <%= @login_url %> 
 
