--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -6,6 +6,7 @@
   }
 }
 
+.error_box{ font-weight: normal; line-height: 20px; color: #B94A48; display: block; }
 .error_message{ color: #B94A48;margin-top: 2px;}
 
 .form_validation label.error, .form_validation input.submit { margin-left: 0px; color: #B94A48; margin-top: 2px; font-weight: 400;}
