--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -5,7 +5,7 @@
 	        	<p>Please enter all mandatory (<span class="asterisk">*</span>) fields.</p>
 	        </div>
 	        <div class="panel-body">
-	        	<%= form_for @user, :html=>{:class=>"form_validation"} do |f| %>
+	        	<%= form_for @user, :html=>{:class=>"form_validation user_form"} do |f| %>
 				    <%=f.hidden_field :role_id, :value=>@role_id%>
 				    <% if @user.errors.any? %>
 				    <div id="error_explanation">
@@ -45,5 +45,7 @@
 	{
 	    showHideMenu('li_teacher');	
 	}
+	
+email_valid = "<%= url_for :controller=> 'users', :action => 'email_validation', :id=> action_name.eql?("edit") ? @user.id : 0%>"	
 </script>
 
