Licenses CRUD operations

--- a/app/views/licenses/update.js.erb
+++ b/app/views/licenses/update.js.erb
@@ -1,6 +1,11 @@
-$('#id_license_info').html('<%= j(render "licenses_info") %>')
 
 $('#license_no_of_licenses').val('');
 $('#datepicker').val('');
 <% @license = License.new %>
+
+$('#id_license').html('<%= j(render "form") %>');
+$('#id_license_info').html('<%= j(render "licenses_info") %>')
+
+
+
 
