--- a/app/views/schools/index.html.erb
+++ b/app/views/schools/index.html.erb
@@ -21,9 +21,9 @@
                     <th>City</th>
 					<th>State</th>
                     <th>Country</th>
-					<th>Licenses In Use</th>
+					<!-- <th>Licenses In Use</th>
 					<th>Unused Licenses</th>
-					<th>Expiration Date</th>
+					<th>Expiration Date</th> -->
 					<th>Actions</th>
                  </tr>
               </thead>
@@ -37,19 +37,19 @@
                       <td class="center "><%= school.city %></td>
                       <td class="center "><%= school.state %></td>
 					  <td class="center "><%= school.country %></td>
+					  <!-- <td class="center "></td>
 					  <td class="center "></td>
-					  <td class="center "></td>
-					  <td class="center "></td>
+					  <td class="center "></td> -->
    				      <td data-no-turbolink>
 						  <% if can? :update, School %>
-						      <%= link_to '<i title="Edit School" class="fa fa-pencil"></i>'.html_safe, edit_school_path(school) %> 						  <%end%>
+						      <%= link_to '<i title="Edit School" class="fa fa-pencil"></i>'.html_safe, edit_school_path(school) %> |  						  <%end%>
    				   	      <% if can? :destroy, School %> 
-						      <%= link_to '<i title="Archive School" class="glyphicon glyphicon-trash"></i>'.html_safe, school, method: :delete, data: { confirm: 'Are you sure?' } %> 
+						      <%= link_to '<i title="Archive School" class="glyphicon glyphicon-trash"></i>'.html_safe, school, method: :delete, data: { confirm: 'Are you sure?' } %> |
 					      <%end%>
-						  <%= link_to '<i title="Add License" class="glyphicon glyphicon-tag"></i>'.html_safe, new_license_path(:school_id=>school)%>
+						  <%= link_to '<i title="Add License" class="glyphicon glyphicon-tag"></i>'.html_safe, new_license_path(:school_id=>school)%> | 
 						  <%#= link_to '<i title="School Admin List" class="glyphicon glyphicon-tag"></i>'.html_safe, users_path(:school_id=>school, :role_id=>2)%> 
-						  <%=link_to 'School Admin List', users_path(:school_id=>school, :role_id=>2), :class=>"btn btn-success btn-xs"%>	
-					</td>
+						  <%=link_to 'School Admin List', users_path(:school_id=>school, :role_id=>2), :class=>"btn btn-success btn-xs"%> 
+				     </td>
                  </tr>
 				 <% end %>
         </tbody>
