--- a/app/views/users/_assign_license.html.erb
+++ b/app/views/users/_assign_license.html.erb
@@ -4,6 +4,7 @@
 	       <div class="panel-body">
 			   <%= form_for @user, :html=>{:class=>"form_validation"} do |f| %>
 	        	<%#= form_tag update_user_license_users_path(:id=>@user.id), :class=>"form_validation"  do %>
+				<%= f.hidden_field :assign_lic, :value=>""%>
 				    <div class="row">
 		                <div class="col-sm-6">
 		                    <div class="form-group">
@@ -27,7 +28,8 @@
 <script type="text/javascript">
 $(document).ready(function () {
     $('.class_licenses').change(function() {
-		$('#user_license_expiry_date').val($(".class_licenses :selected").text()); 
+		$('#user_license_expiry_date').val($(".class_licenses :selected").text());
+		$('#user_assign_lic').val("true"); 
     });	
 });
 </script>
